# Vyzio_website

./: .gitignore  README.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/abonnements/: page.tsx
frontend/src/app/achat-succes/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/annonces/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/connexion/: page.tsx
frontend/src/app/credits/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/favoris/: page.tsx
frontend/src/app/inscription/: page.tsx
frontend/src/app/mes-achats/: page.tsx
frontend/src/app/mes-annonces/: page.tsx
frontend/src/app/mes-ventes/: page.tsx
frontend/src/app/messages/: page.tsx
frontend/src/app/parametres/: page.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth-store.ts
vyzio_ads/: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  BRANCHING_STRATEGY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILE_INVENTORY.md  FINAL_NOTES.md  INDEX.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  VISUAL_OVERVIEW.md  WEBSOCKETS_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.bat  setup.sh
vyzio_ads/.github/: PULL_REQUEST_TEMPLATE.md
vyzio_ads/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
vyzio_ads/.github/workflows/: ci-cd.yml  ci.yml
vyzio_ads/apps/: health.py
vyzio_ads/apps/admin_panel/: models.py  tests.py  urls.py  views.py
vyzio_ads/apps/analytics/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
vyzio_ads/apps/analytics/migrations/: 0001_initial.py
vyzio_ads/apps/listings/: admin.py  filters.py  models.py  search.py  search_views.py  serializers.py  tests.py  tests_search.py  tests_storage.py  urls.py  views.py
vyzio_ads/apps/listings/management/commands/: cleanup_images.py  load_fixtures.py
vyzio_ads/apps/listings/migrations/: 0001_initial.py  0002_search_optimization_indices.py  0003_remove_listing_listings_price_idx_and_more.py  0004_listing_condition.py
vyzio_ads/apps/listings/services/: __init__.py  storage.py
vyzio_ads/apps/messaging/: admin.py  consumers.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
vyzio_ads/apps/messaging/migrations/: 0001_initial.py  0002_notification.py
vyzio_ads/apps/orders/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vyzio_ads/apps/orders/migrations/: 0001_initial.py  __init__.py
vyzio_ads/apps/payments/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
vyzio_ads/apps/payments/migrations/: 0001_initial.py  0002_alter_payment_payment_type.py
vyzio_ads/apps/payments/services/: __init__.py  stripe_service.py  webhook_handler.py
vyzio_ads/apps/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
vyzio_ads/apps/reviews/migrations/: 0001_initial.py
vyzio_ads/apps/users/: admin.py  auth_urls.py  auth_views.py  models.py  permissions.py  serializers.py  tests.py  views.py
vyzio_ads/apps/users/management/commands/: create_superuser_from_env.py
vyzio_ads/apps/users/migrations/: 0001_initial.py
vyzio_ads/config/: asgi.py  celery.py  channels_config.py  settings.py  urls.py  ws_routing.py  wsgi.py
vyzio_ads/config/settings/: __init__.py  base.py  dev.py  dev_minimal.py  dev_simple.py  prod.py  test.py
vyzio_ads/docs/: backup_policy.md  deployment.md
vyzio_ads/scripts/: backup_sqlite.ps1
vyzio_ads/utils/: stripe_webhooks.py
(+24 files in other folders)
